Update index.html with optimized images

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
     <div class="row">
         <div class="col-md-4 col-xs-12">
             <div class="card mb-3">
-                <img src="images/babel.jpg" class="card-img-top" alt="...">
+                <div class="img-wrapper">
+                    <img src="images/babel.jpg" class="card-img-top" alt="...">
+                </div>
                 <div class="card-body">
                     <h5 class="card-title">Babel</h5>
                     <p class="card-text">Babel is a toolchain that is mainly used to
@@ -25,7 +27,9 @@
         </div>
         <div class="col-md-4 col-xs-12">
             <div class="card mb-3">
-                <img src="images/scss.svg" class="card-img-top" alt="...">
+                <div class="img-wrapper">
+                    <img src="images/scss.svg" class="card-img-top" alt="...">
+                </div>
                 <div class="card-body">
                     <h5 class="card-title">SCSS</h5>
                     <p class="card-text">SCSS is a preprocessor which lets you use
@@ -35,11 +39,56 @@
         </div>
         <div class="col-md-4 col-xs-12">
             <div class="card mb-3">
-                <img src="images/bootstrap.png" class="card-img-top" alt="...">
+                <div class="img-wrapper">
+                    <img src="images/bootstrap.png" class="card-img-top" alt="...">
+                </div>
                 <div class="card-body">
                     <h5 class="card-title">Bootstrap</h5>
                     <p class="card-text">Bootstrap is the most popular CSS Framework
                         for developing responsive...</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <br>
+    <h3>Optimized images</h3>
+    <hr>
+    <div class="row">
+
+        <div class="col-md-4 col-xs-12">
+            <div class="card mb-3">
+                <div class="img-wrapper">
+                    <img src="images/image.jpg" class="card-img-top" alt="...">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">JPG image</h5>
+                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-xs-12">
+            <div class="card mb-3">
+                <div class="img-wrapper">
+                    <img src="images/image.png" class="card-img-top" alt="...">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">PNG image</h5>
+                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-xs-12">
+            <div class="card mb-3">
+                <div class="img-wrapper">
+                    <img src="images/image.webp" class="card-img-top" alt="...">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">WEBP image</h5>
+                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
                 </div>
             </div>
         </div>
